<resources>
    <string name="app_name">EventTracker</string>
    <string name="action_settings">Settings</string>
    <string name="open_settings">Open settings</string>
    <string name="calendar_tab">Calendar</string>
    <string name="summary_tab">Summary</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="previous_month">Previous month</string>
    <string name="next_month">Next month</string>
    <string name="settings_placeholder">Settings will be implemented next (event types, export, backups).</string>
    <string name="day_events">Events</string>
    <string name="custom_events">Custom events</string>
    <string name="add_custom_event_hint">Add custom event</string>
    <string name="add">Add</string>
    <string name="add_today">Add event for today</string>
    <string name="no_custom_events">No custom events for this day.</string>
    <string name="delete">Delete</string>
    <string name="event_types">Event types</string>
    <string name="add_event_type">Add event type</string>
    <string name="edit_event_type">Edit event type</string>
    <string name="event_name">Name</string>
    <string name="event_emoji_optional">Emoji (optional)</string>
    <string name="color">Color</string>
    <string name="edit">Edit</string>
    <string name="export">Export</string>
    <string name="export_tsv">Export TSV</string>
    <string name="calendar">Calendar</string>
    <string name="calendar_max_markers">Max markers per day</string>
    <string name="calendar_max_markers_value">Max markers per day: %1$d</string>
    <string name="summary">Summary</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="weekday_monday">Mon</string>
    <string name="weekday_tuesday">Tue</string>
    <string name="weekday_wednesday">Wed</string>
    <string name="weekday_thursday">Thu</string>
    <string name="weekday_friday">Fri</string>
    <string name="weekday_saturday">Sat</string>
    <string name="weekday_sunday">Sun</string>
    <string name="previous_period">Previous period</string>
    <string name="next_period">Next period</string>
    <string name="summary_event_types">Event types</string>
    <string name="summary_custom_texts">Custom texts</string>
    <string name="summary_empty">No events recorded for this period</string>
    <string name="backups">Backups</string>
    <string name="connect_dropbox">Connect Dropbox</string>
    <string name="backup_now">Backup now</string>
    <string name="restore_latest">Restore latest</string>
    <string name="daily_backup">Daily backup</string>
    <string name="dropbox_app_key">PUT_YOUR_DROPBOX_APP_KEY_HERE</string>
    <string name="dropbox_redirect_uri">dev.vmikk.eventtracker://oauth2redirect</string>
    <string name="dropbox_connected">Dropbox connected</string>
    <string name="dropbox_setup_instructions">Set your Dropbox app key in the string resource dropbox_app_key, and register redirect URI dev.vmikk.eventtracker://oauth2redirect in your Dropbox app settings.</string>
    <string name="restore_warning">This will replace the local database with the latest Dropbox backup. Restart is recommended after restore.</string>
    <string name="restore_done">Restore completed. Please fully close and reopen the app.</string>
    <string name="delete_event_type">Delete event type</string>
    <string name="delete_event_type_confirm">Are you sure you want to delete "%1$s"?</string>
    <string name="delete_event_type_confirm_with_usage">Are you sure you want to delete "%1$s"? This will remove it from all days where it\'s currently used.</string>
    <string name="custom_event_duplicate">This custom event already exists for this day</string>
    <string name="negate_event">Mark as did not happen</string>
    <string name="error_saving_event">Failed to save event. Please try again.</string>
    <string name="error_loading_events">Failed to load events. Please try again.</string>
    <string name="error_deleting_event">Failed to delete event. Please try again.</string>
    <string name="error_exporting">Failed to export data. Please try again.</string>
    <string name="error_backup">Backup failed. Please check your connection and try again.</string>
    <string name="error_restore">Restore failed. Please check your connection and try again.</string>
    <string name="error_network">Network error. Please check your connection.</string>
    <string name="error_auth">Authentication failed. Please reconnect to Dropbox.</string>
    <string name="dropbox_connect_success">Successfully connected to Dropbox</string>
    <string name="dropbox_connect_failed">Failed to connect to Dropbox. Please try again.</string>
    <string name="backup_success">Backup completed successfully</string>
    <string name="restore_success">Restore completed successfully</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>